--- a/QuizApp/src/App.css
+++ b/QuizApp/src/App.css
@@ -149,7 +149,7 @@ display: flex;
 justify-content: space-between;
 flex-direction: row;
 margin-top: 40px;
-width: 65%;
+width: 75%;
 }
 
 .role {
@@ -174,6 +174,7 @@ background-color: #a5cbf4;
 color: white;
 font-size: 20px;
 font-weight: 600;
+margin-top: 10px;
 letter-spacing: 1px;
 }
 /*Players waiting*/
