--- a/QuizApp/src/App.css
+++ b/QuizApp/src/App.css
@@ -338,3 +338,128 @@ font-weight: 800;
 .select-button button:hover:enabled {
   background-color: #ad85d3;
 }
+/*Waitingquestion*/
+.waiting-container{
+  background-color: #a5cbf4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/*question*/
+.quiz-container{
+  background-color: #f4a5b0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.question{
+  display: flex;
+  flex-direction: column;
+}
+.question p{
+  margin-top: 20px;
+}
+.response{
+  margin-top: 100px;
+}
+.response p{
+  margin-top: 20px;
+}
+/*Quiz*/
+.question {
+  margin-bottom: 20px;
+}
+
+.timer {
+  margin: 20px 0;
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.timer-track {
+  width: 100%;
+  height: 12px;
+  background-color: #f5f5f5; 
+  border-radius: 2px; 
+  position: relative;
+  overflow: hidden;
+}
+
+.timer-bar {
+  height: 100%;
+  background-color: #ad85d3; 
+  border-radius: 2px 0 0 2px; 
+  transition: width 1s linear;
+}
+
+.answer-options {
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+}
+
+.answer {
+  padding: 15px;
+  margin-bottom: 50px;
+  border-radius: 8px;
+  text-align: center;
+  cursor: pointer;
+  background-color: #f9f9f9;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.selected {
+  background-color: #ad85d3;
+  color: white;
+}
+
+.next {
+  margin-top: 20px;
+}
+
+.next button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #a5b5f3;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.next button:disabled {
+  background-color: #ccc; 
+  color: #666; 
+  cursor: not-allowed; 
+}
+
+/*Result*/
+.result-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #ad85d3;
+}
+
+.result-container p{
+  margin-top: 20px;
+}
+.play-again{
+  margin-top: 30px;
+  border-radius: 8px;
+  background-color: #CDA5F2;
+}
+button a{
+  text-decoration: none;
+  color: white;
+}
