--- a/QuizApp/src/App.css
+++ b/QuizApp/src/App.css
@@ -349,6 +349,14 @@ font-weight: 800;
   align-items: center;
   height: 100vh;
 }
+.waiting-question-container{
+  background-color: #a5cbf4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 /*question*/
 .quiz-container{
