--- a/QuizApp/src/App.css
+++ b/QuizApp/src/App.css
@@ -120,7 +120,7 @@ font-weight: 600;
 }
 
 .btn {
-margin-top: 300px;
+margin-top: 40%;
 display: flex;
 justify-content: center;
 }
@@ -367,9 +367,36 @@ font-weight: 800;
   align-items: center;
   height: 100vh;
 }
+.quizmaster-view{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
 .question{
   display: flex;
   flex-direction: column;
+}
+.player-answer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+.player-answer h1{
+  margin-bottom: 20px;
+}
+.correct-answer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0px;
+}
+.correct-answer h1{
+  margin-bottom: 20px;
 }
 .question p{
   margin-top: 20px;
@@ -382,6 +409,10 @@ font-weight: 800;
 }
 /*Quiz*/
 .question {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -393,7 +424,9 @@ font-weight: 800;
   justify-content: center;
   align-items: center;
 }
-
+.timer p{
+  margin-left: 10px;
+}
 .timer-track {
   width: 100%;
   height: 12px;
@@ -432,7 +465,7 @@ font-weight: 800;
 }
 
 .next {
-  margin-top: 20px;
+  margin-top: 10%;
 }
 
 .next button {
